[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[project]
name = "private-assistant-display-controller"
version = "0.2.0"
description = "Package is intended to be used in conjunction with the display skill to control a display device."
authors = [
    { name = "sktr22", email = "sktr22@github.com" }
]
readme = "README.md"
license = "GPL-3.0-only"
license-files = [
    "LICENSE",
]

keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

requires-python = ">=3.12,<3.14"
dependencies = [
    "aiomqtt>=2.0.0",
    "minio>=7.2.0",
    "Pillow>=10.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
rpi = ["inky>=2.0.0"]

[project.scripts]
inky-controller = "private_assistant_display_controller.main:app"

[project.urls]
Homepage = "https://github.com/stkr22/private-assistant-display-controller-py"
Repository = "https://github.com/stkr22/private-assistant-display-controller-py"
Documentation = "https://github.com/stkr22/private-assistant-display-controller-py/tree/main/docs"
Issues = "https://github.com/stkr22/private-assistant-display-controller-py/issues"
Changelog = "https://github.com/stkr22/private-assistant-display-controller-py/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "ruff~=0.14.14",
    "mypy~=1.17.0",
    "pytest~=9.0.2",
    "pytest-cov~=7.0.0",
    "pytest-xdist~=3.6.0",
    "pytest-asyncio~=1.3.0",
    "types-pyyaml~=6.0.12.20240311",
]
